data/examples/MFDemo/kubernetes/istio/BC-virtualsvc.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "mydemo.example.com"
  gateways:
  - BC-gateway
  http:
  - match:
    - uri:
        prefix: /B
    route:
    - destination:
        port:
          number: 80
        host: B.default.svc
  - match:
    - uri:
        prefix: /C
    route:
    - destination:
        port:
          number: 80
        host: C.default.svc
